added couple of new docs

--- a/public/jxminer-config/index.html
+++ b/public/jxminer-config/index.html
@@ -791,7 +791,8 @@ td, th {
 </blockquote>
 <hr>
 <h4>SERVICES CONFIGURATION</h4>
-<p>The service configuration files is located at <code class="language-text">/home/jxminer/.jxminer/config</code> folder   </p>
+<p><a href="#services"></a>
+The service configuration files is located at <code class="language-text">/home/jxminer/.jxminer/config</code> folder   </p>
 <table>
 <thead>
 <tr>
@@ -801,15 +802,15 @@ td, th {
 </thead>
 <tbody>
 <tr>
-<td align="left"><strong>coins.ini</strong></td>
+<td align="left"><a href="/services-coins">coins.ini</a></td>
 <td align="left">library of coins, wallet addresses and algorithm</td>
 </tr>
 <tr>
-<td align="left"><strong>fans.ini</strong></td>
+<td align="left"><a href="/services-fans">fans.ini</a></td>
 <td align="left">casing and CPU fan speed and curve config file</td>
 </tr>
 <tr>
-<td align="left"><strong>machine.ini</strong></td>
+<td align="left"><a href="/services-machine">machine.ini</a></td>
 <td align="left">main file for configuring what coins to mine</td>
 </tr>
 <tr>
@@ -817,23 +818,23 @@ td, th {
 <td align="left">reserved for future notification service</td>
 </tr>
 <tr>
-<td align="left"><strong>sensors.ini</strong></td>
+<td align="left"><a href="/services-sensors">sensors.ini</a></td>
 <td align="left">file for blacklisting pwm sensors module</td>
 </tr>
 <tr>
-<td align="left"><strong>slack.ini</strong></td>
+<td align="left"><a href="/services-slack">slack.ini</a></td>
 <td align="left">slack notification information</td>
 </tr>
 <tr>
-<td align="left"><strong>systemd.ini</strong></td>
+<td align="left"><a href="/services-systemd">systemd.ini</a></td>
 <td align="left">watchdog via systemd notification</td>
 </tr>
 <tr>
-<td align="left"><strong>tuner.ini</strong></td>
+<td align="left"><a href="/services-tuner">tuner.ini</a></td>
 <td align="left">GPU tuning configuration file</td>
 </tr>
 <tr>
-<td align="left"><strong>watchdog.ini</strong></td>
+<td align="left"><a href="/services-watchdog">watchdog.ini</a></td>
 <td align="left">watchdog configuration file</td>
 </tr>
 </tbody>
@@ -851,59 +852,59 @@ td, th {
 <tbody>
 <tr>
 <td align="left"><strong>amdxmrig.ini</strong></td>
-<td align="left"></td>
+<td align="left">XMRig AMD GPU configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>avermore.ini</strong></td>
-<td align="left"></td>
+<td align="left">avermore miner configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>castxmr.ini</strong></td>
-<td align="left"></td>
+<td align="left">castxmr configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>ccminer.ini</strong></td>
-<td align="left"></td>
+<td align="left">ccminer configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>cpuxmrig.ini</strong></td>
-<td align="left"></td>
+<td align="left">XMRig CPU configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>cryptodrege.ini</strong></td>
-<td align="left"></td>
+<td align="left">CryptoDredge configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>ethminer.ini</strong></td>
-<td align="left"></td>
+<td align="left">ethminer configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>ewbf.ini</strong></td>
-<td align="left"></td>
+<td align="left">ewbf miner configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>nvidiaxmrig.ini</strong></td>
-<td align="left"></td>
+<td align="left">XMRig Nvidia GPU configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>phoenixminer.ini</strong></td>
-<td align="left"></td>
+<td align="left">PhoenixMiner configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>sgminer.ini</strong></td>
-<td align="left"></td>
+<td align="left">Sgminer configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>teamredminer.ini</strong></td>
-<td align="left"></td>
+<td align="left">teamredminer configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>trex.ini</strong></td>
-<td align="left"></td>
+<td align="left">T-Rex configuration file</td>
 </tr>
 <tr>
 <td align="left"><strong>wildrig.ini</strong></td>
-<td align="left"></td>
+<td align="left">wildrig configuration file</td>
 </tr>
 </tbody>
 </table>
